[gd_scene load_steps=22 format=2]

[ext_resource path="res://Media/Runaway-Railway-layout09-690x460-1.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Media/Blauw.png" type="Texture" id=3]
[ext_resource path="res://Media/Groen.png" type="Texture" id=4]
[ext_resource path="res://Media/Draaischakelaar.png" type="Texture" id=5]
[ext_resource path="res://Media/BlauwVerlicht.png" type="Texture" id=6]
[ext_resource path="res://Media/GroenVerlicht.png" type="Texture" id=7]
[ext_resource path="res://Media/Instellingen.png" type="Texture" id=8]
[ext_resource path="res://Media/Checkbox.png" type="Texture" id=9]
[ext_resource path="res://Media/Checkbox2.png" type="Texture" id=10]
[ext_resource path="res://Media/shortcuts.png" type="Texture" id=11]
[ext_resource path="res://Media/Karretje.png" type="Texture" id=12]
[ext_resource path="res://Audio/Soundtrack.mp3" type="AudioStream" id=13]
[ext_resource path="res://Media/KarretjedDicht.png" type="Texture" id=14]
[ext_resource path="res://Media/Locomotief.png" type="Texture" id=15]
[ext_resource path="res://Media/InstellingenKnop.png" type="Texture" id=16]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1467, 920, 0, 0, 0, 0, 1467, 903, 0, 0, 0, 0, 1467, 877, 0, 0, 0, 0, 1466, 760, 0, 0, 0, 0, 1466, 730, 0, 0, 0, 0, 1466, 708, 0, 0, 0, 0, 1491, 676, 0, 0, 0, 0, 1498, 640, 0, 0, 0, 0, 1481, 613, 0, 0, 0, 0, 1454, 593, 0, 0, 0, 0, 1415, 589, 0, 0, 0, 0, 1400, 601, 0, 0, 0, 0, 1394, 622, 0, 0, 0, 0, 1393, 646, 0, 0, 0, 0, 1392, 688, 0, 0, 0, 0, 1396, 750, 0, 0, 0, 0, 1390, 799, 0, 0, 0, 0, 1380, 850, 0, 0, 0, 0, 1355, 874, 0, 0, 0, 0, 1305, 888, 0, 0, 0, 0, 1255, 891, 0, 0, 0, 0, 1212, 885, 0, 0, 0, 0, 1185, 868, 0, 0, 0, 0, 1178, 847, -0.445449, 2.6727, 0.445449, -2.6727, 1169, 812, 0, 0, 0, 0, 1184, 778, 0, 0, 0, 0, 1203, 748, 0, 0, 0, 0, 1219, 701, 0, 0, 0, 0, 1216, 647, 0, 0, 0, 0, 1180, 613, 0, 0, 0, 0, 1121, 596, 0, 0, 0, 0, 1047, 579, 0, 0, 0, 0, 978, 569, 0, 0, 0, 0, 864, 575, 0, 0, 0, 0, 794, 568, 0, 0, 0, 0, 766, 588, 0, 0, 0, 0, 749, 640, 0, 0, 0, 0, 751, 722, 0, 0, 0, 0, 754, 766, 0, 0, 0, 0, 754, 829, 0, 0, 0, 0, 754, 869, 0, 0, 0, 0, 754, 907, 0, 0, 0, 0, 742, 929, 0, 0, 0, 0, 709, 938, 0, 0, 0, 0, 665, 936, 0, 0, 0, 0, 645, 948, 0, 0, 0, 0, 634, 981, 0, 0, 0, 0, 638, 1019, 0, 0, 0, 0, 635, 1057, 0, 0, 0, 0, 633, 1115, 0, 0, 0, 0, 648, 1143, 0, 0, 0, 0, 695, 1157, 0, 0, 0, 0, 731, 1155, 0, 0, 0, 0, 761, 1133, 0, 0, 0, 0, 777, 1100, 0, 0, 0, 0, 789, 1058, 0, 0, 0, 0, 803, 1021, 0, 0, 0, 0, 833, 991, 0, 0, 0, 0, 870, 970, 0, 0, 0, 0, 897, 940, 0, 0, 0, 0, 927, 912, -24.6942, 3.36739, 24.6942, -3.36739, 965, 892, -8.9797, -13.4695, 8.9797, 13.4695, 1001, 908, 0, 0, 0, 0, 995, 968, 0, 0, 0, 0, 992, 1054, 0, 0, 0, 0, 981, 1092, 0, 0, 0, 0, 956, 1116, 0, 0, 0, 0, 926, 1158, -6.54064, -23.7841, 6.54064, 23.7841, 915, 1200, 0, 0, 0, 0, 953, 1224, 0, 0, 0, 0, 1030, 1217, 0, 0, 0, 0, 1080, 1206, 0, 0, 0, 0, 1158, 1194, 0, 0, 0, 0, 1252, 1163, 0, 0, 0, 0, 1306, 1133, 0, 0, 0, 0, 1383, 1094, 0, 0, 0, 0, 1425, 1066, 0, 0, 0, 0, 1472, 1016, 0, 0, 0, 0, 1468, 974, 0, 0, 0, 0, 1467, 943, 0, 0, 0, 0, 1467, 920 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "Open",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "Open",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "Open",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
position = Vector2( -502, -340 )
script = ExtResource( 2 )

[node name="Map" type="Sprite" parent="."]
position = Vector2( 1256, 813 )
texture = ExtResource( 1 )

[node name="UnloadVrijgeven1" type="TextureButton" parent="Map"]
margin_left = 584.0
margin_top = -66.0
margin_right = 722.0
margin_bottom = 70.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )

[node name="UnloadVrijgeven2" type="TextureButton" parent="Map"]
margin_left = 584.0
margin_top = 303.0
margin_right = 722.0
margin_bottom = 439.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )

[node name="LoadPoortjes" type="TextureButton" parent="Map"]
margin_left = 234.0
margin_top = -442.0
margin_right = 377.0
margin_bottom = -301.0
texture_normal = ExtResource( 5 )

[node name="LoadBeugels" type="TextureButton" parent="Map"]
margin_left = 66.0
margin_top = -442.0
margin_right = 208.0
margin_bottom = -300.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="LoadVrijgeven1" type="TextureButton" parent="Map"]
margin_left = -108.0
margin_top = -438.0
margin_right = 30.0
margin_bottom = -302.0
rect_pivot_offset = Vector2( 52, -137 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )

[node name="LoadVrijgeven2" type="TextureButton" parent="Map"]
margin_left = 390.0
margin_top = -443.0
margin_right = 528.0
margin_bottom = -307.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )

[node name="Button" type="Button" parent="Map"]
margin_left = 598.0
margin_top = -276.0
margin_right = 710.0
margin_bottom = -170.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 16 )
flat = true

[node name="UnloadBeugels" type="TextureButton" parent="Map"]
margin_left = 584.0
margin_top = 127.0
margin_right = 726.0
margin_bottom = 269.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="DelayTimer" type="Timer" parent="."]

[node name="SetupTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Instellingen" type="Sprite" parent="."]
visible = false
position = Vector2( 1253, 825 )
texture = ExtResource( 8 )

[node name="TextureButton" type="TextureButton" parent="Instellingen"]
margin_left = 1.0
margin_top = -135.0
margin_right = 63.0
margin_bottom = -73.0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="InstellingenSpel" type="Button" parent="Instellingen"]
margin_left = -120.0
margin_top = 171.0
margin_right = 130.0
margin_bottom = 221.0
text = "Naar spel"

[node name="InstellingenShort" type="Button" parent="Instellingen"]
margin_left = -120.0
margin_top = 110.0
margin_right = 130.0
margin_bottom = 160.0
text = "Shortcuts"

[node name="Shortcuts" type="Sprite" parent="Instellingen"]
visible = false
texture = ExtResource( 11 )

[node name="ShortcutsSluiten" type="Button" parent="Instellingen/Shortcuts"]
margin_left = -120.0
margin_top = 185.0
margin_right = 130.0
margin_bottom = 235.0
text = "Sluiten"

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="T1V1" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1467, 920 )
rotation = -1.5708

[node name="V1" type="AnimatedSprite" parent="Path2D/T1V1"]
rotation = 1.5708
frames = SubResource( 2 )
animation = "Open"

[node name="T1V2" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1467, 920 )
rotation = -1.5708

[node name="V2" type="AnimatedSprite" parent="Path2D/T1V2"]
rotation = 1.5708
frames = SubResource( 3 )
animation = "Open"

[node name="T1V3" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1467, 920 )

[node name="V3" type="AnimatedSprite" parent="Path2D/T1V3"]
rotation = 1.5708
frames = SubResource( 4 )

[node name="T1V4" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1467, 920 )
rotation = 1.5708

[node name="V4" type="AnimatedSprite" parent="Path2D/T1V4"]
rotation = 1.5708
frames = SubResource( 5 )
animation = "Open"

[node name="T1VL" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1467, 920 )
rotation = -1.5708

[node name="VL" type="Sprite" parent="Path2D/T1VL"]
rotation = 1.5708
texture = ExtResource( 15 )

[connection signal="button_down" from="Map/UnloadVrijgeven1" to="." method="_on_UnloadVrijgeven1_button_down"]
[connection signal="button_up" from="Map/UnloadVrijgeven1" to="." method="_on_UnloadVrijgeven1_button_up"]
[connection signal="button_down" from="Map/UnloadVrijgeven2" to="." method="_on_UnloadVrijgeven2_button_down"]
[connection signal="button_up" from="Map/UnloadVrijgeven2" to="." method="_on_UnloadVrijgeven2_button_up"]
[connection signal="pressed" from="Map/LoadPoortjes" to="." method="_on_LoadPoortjes_pressed"]
[connection signal="pressed" from="Map/LoadBeugels" to="." method="_on_LoadBeugels_pressed"]
[connection signal="button_down" from="Map/LoadVrijgeven1" to="." method="_on_LoadVrijgeven1_button_down"]
[connection signal="button_up" from="Map/LoadVrijgeven1" to="." method="_on_LoadVrijgeven1_button_up"]
[connection signal="button_down" from="Map/LoadVrijgeven2" to="." method="_on_LoadVrijgeven2_button_down"]
[connection signal="button_up" from="Map/LoadVrijgeven2" to="." method="_on_LoadVrijgeven2_button_up"]
[connection signal="pressed" from="Map/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Map/Button" to="Instellingen" method="_on_Button_pressed"]
[connection signal="pressed" from="Map/UnloadBeugels" to="." method="_on_UnloadBeugels_pressed"]
[connection signal="timeout" from="SetupTimer" to="." method="_on_SetupTimer_timeout"]
[connection signal="toggled" from="Instellingen/TextureButton" to="." method="_on_TextureButton_toggled"]
[connection signal="toggled" from="Instellingen/TextureButton" to="." method="_on_TextureButtonuit_toggled"]
[connection signal="pressed" from="Instellingen/InstellingenSpel" to="." method="_on_InstellingenSpel_pressed"]
[connection signal="pressed" from="Instellingen/InstellingenSpel" to="Instellingen" method="_on_InstellingenSpel_pressed"]
[connection signal="pressed" from="Instellingen/InstellingenShort" to="." method="_on_InstellingenShort_pressed"]
[connection signal="pressed" from="Instellingen/InstellingenShort" to="Instellingen" method="_on_InstellingenShort_pressed"]
[connection signal="pressed" from="Instellingen/Shortcuts/ShortcutsSluiten" to="." method="_on_ShortcutsSluiten_pressed"]
[connection signal="pressed" from="Instellingen/Shortcuts/ShortcutsSluiten" to="Instellingen" method="_on_ShortcutsSluiten_pressed"]
